@startuml
title Prix Goncourt 2025 - Diagramme de classes

' ======================
'        CLASSES
' ======================

class Author {
  +id_author : int
  +last_name : string
  +first_name : string
  +biography : string
}

class JuryMember {
  +id_jury_member : int
  +last_name : string
  +first_name : string
  +type : string
}

class Editor {
  +id_editor : int
  +name : string
}

class LiteraryAward {
  +id_literary_award : int
  +name : string
}

class AwardEdition {
  +id_award_edition : int
  +year : int
  +date : Date
  +location : string
}

class Book {
  +id_book : int
  +book_title : string
  +summary : string
  +publishing_date : Date
  +nb_pages : int
  +isbn : string
  +editor_price : decimal
}

class Character {
  +id_character : int
  +nickname : string
  +first_name : string
  +last_name : string
}

class Phase {
  +id_phase : int
  +type : string
  +date : Date
}

class Participate {
    +role :string
}

class Vote {
  +id_vote : int
  +id_jury_member:int
  +id_phase
  +id_book
}

' ======================
'    ASSOCIATIONS
' ======================

' Livre – Auteur : un auteur écrit plusieurs livres
Author "1" -- "0..*" Book : writes

' Livre – Editeur : un éditeur publie plusieurs livres
Editor "1" -- "0..*" Book : publish

' PrixLitteraire – EditionPrix : un prix a plusieurs éditions
LiteraryAward "1" -- "0..*" AwardEdition : has

' EditionPrix – Phase : une édition se compose de plusieurs phases
AwardEdition "1" -- "1..*" Phase : occurs

' EditionPrix – MembreJury : participation via Participe
JuryMember "1" -- "0..*" Participate
AwardEdition "1" -- "0..*" Participate

' Phase – Livre : sélection des livres
Phase "0..*" -- "0..*" Book

' Vote - comptage des votes '
JuryMember "1" -- "0..*" Vote
Phase "1" -- "0..*" Vote
Book "1" -- "0..*" Vote

' Livre – Personnage : un livre a plusieurs personnages principaux
Book "1" -- "0..*" Character



@enduml
